--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ramda": "^0.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-hook": "^4.1.1",
     "react-redux": "^8.1.3",
     "styled-components": "^6.0.8"
   },
